--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/react-movies/manifest.json"><link rel="shortcut icon" href="/react-movies/favicon.ico"><link href="https://fonts.googleapis.com/css?family=Dancing+Script|Fredoka+One|Philosopher" rel="stylesheet"><title>React TMDB</title><link href="/react-movies/static/css/main.d78878ea.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/react-movies/static/js/main.3aed7684.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Fredoka+One|Philosopher" rel="stylesheet">
+    <title>React TMDB</title>
+    <link href="/static/css/main.d78878ea.css" rel="stylesheet">
+</head>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="text/javascript" src="/static/js/main.3aed7684.js"></script>
+</body>
+
+</html>
